<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductRegisterFragment">

    <TextView
        android:id="@+id/tv_product_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_product_register_capture_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/barcode_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/product_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_product_name"
        app:layout_constraintStart_toStartOf="@+id/et_product_name" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_product_register_product_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_product_register_capture_barcode" />

    <TextView
        android:id="@+id/tv_product_register_product_barcode_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/barcode"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_product_register_product_barcode"
        app:layout_constraintStart_toStartOf="@+id/et_product_register_product_barcode" />

    <EditText
        android:id="@+id/et_product_register_product_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/barcode"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_product_image_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_product_name" />

    <TextView
        android:id="@+id/tv_product_image_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/image"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_product_image_preview"
        app:layout_constraintStart_toStartOf="@+id/iv_product_image_preview" />

    <ImageView
        android:id="@+id/iv_product_image_preview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_product_register_submit"
        app:layout_constraintStart_toStartOf="@+id/et_product_register_product_barcode"
        app:layout_constraintTop_toBottomOf="@+id/et_product_register_product_barcode"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/bt_image_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_choose"
        app:layout_constraintBottom_toBottomOf="@+id/iv_product_image_preview"
        app:layout_constraintEnd_toEndOf="@+id/et_product_register_product_barcode"
        app:layout_constraintTop_toTopOf="@+id/iv_product_image_preview" />

    <Button
        android:id="@+id/bt_product_register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>